# otus-hw04

./: CMakeCXXCompilerId_8cpp.html  CMakeLists.txt  README.md  README_8md.html  custom__traits_8h.html  custom__traits_8h__dep__incl.dot  custom__traits_8h__incl.dot  custom__traits_8h_source.html  dir_000006_000005.html  dir_119b1ea608c82e8ef1352273604d0691.html  dir_23bd91f1ddb692fcf2881045a5d53618.html  dir_5f9abb0508ee7717c64a917f58ebf2af.html  dir_5f9abb0508ee7717c64a917f58ebf2af_dep.dot  dir_63772b626f2709090f0bdca0f40827b4.html  dir_6719ab1f1f7655efc2fa43f7eb574fd1.html  dir_6719ab1f1f7655efc2fa43f7eb574fd1_dep.dot  dir_c1544dc54fdc60b67349e56c35b9d14b.html  dir_d741057ec07c79089f18cc67a110846b.html  dir_d741057ec07c79089f18cc67a110846b_dep.dot  files.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  graph_legend.html  group__print.html  group__type__traits.html  index.html  libs_2print__ip_2tests_2main_8cpp.html  libs_2print__ip_2tests_2main_8cpp__incl.dot  main.cpp  main_8cpp.html  main_8cpp__incl.dot  md__home_runner_work_otus_cpp_2023_06_hw04_otus_cpp_2023_06_hw04_README.html  menudata.js  modules.html  pages.html  print__ip_8h.html  print__ip_8h__dep__incl.dot  print__ip_8h__incl.dot  (+4 more)
.github/workflows/: cmake-multi-platform-build.yml  deploy-gh-pages.yml  release.yml
docs/: doxygen.conf.in
libs/print_ip/: CMakeLists.txt
libs/print_ip/include/: custom_traits.h  print_ip.h
libs/print_ip/tests/: CMakeLists.txt  main.cpp
search/: all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  groups_0.js  groups_1.js  pages_0.js  searchdata.js  variables_0.js
